tests/toylang/neg/000678_mutation.toylang
program a = { a = a if a; } .
